z-index fix for graphic

--- a/css/styles.css
+++ b/css/styles.css
@@ -367,6 +367,7 @@ transform:scale(1.4,1.4);
 -ms-transform:scale(1.4,1.4); /* IE 9 */
 -webkit-transform:scale(1.4,1.4);
 overflow: visible !important;
+z-index: -10;
 }
 
 
